Bug 261336 - Battery warnings are looking bad
Summary: Battery warnings are looking bad
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-27 01:25 UTC by Kai Uwe Broulik
Modified: 2012-10-15 03:16 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
Battery warning looks bad (79.49 KB, image/png)
2010-12-27 01:25 UTC, Kai Uwe Broulik
Details
File indexer has nice icon (65.93 KB, image/png)
2011-01-05 19:58 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2010-12-27 01:25:05 UTC
Created attachment 55275 [details]
Battery warning looks bad

Version:           unspecified (using KDE 4.5.90) 
OS:                Linux

In 4.6 the notification system was further polished and icons have more emphasis now. The battery notifications now/still look weird. Besides the fact that the whole resizing of applets still is not working right (gaps, too small popups, etc.) the exclamation mark is too little. It should be big, like in other notifications. Even KWin‘s effects warning has a big icon although it is resized and blurry but it is big.
Better would be of course a battery icon. Maybe with an exclamation mark overlay or something, but something where you instantly recognize “Something‘s wrong with the battery”.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2011-01-05 19:58:51 UTC
Created attachment 55622 [details]
File indexer has nice icon

The file indexer notification has a nice-looking battery icon. A similar one should be for the battery warnings. With that nice little battery and an exclamation mark overlay or something.
Comment 2 disabled account 2011-05-27 15:08:08 UTC
Isn't this a problem of the power management, since it triggers this notification?
Comment 3 Kai Uwe Broulik 2011-05-28 00:30:56 UTC
Whoever may be responsible, I don’t understand the reason for the icon being small. There is a 64x64 size for the exclamation mark or the green tick, so at least this should be shown in big.
Comment 4 disabled account 2011-05-28 14:08:08 UTC
(In reply to comment #3)
> Whoever may be responsible, I don’t understand the reason for the icon being
> small. There is a 64x64 size for the exclamation mark or the green tick, so at
> least this should be shown in big.

Sure, but it has to be moved to the right component to be fixed, I hope solid is the right choice here.
Comment 5 Kai Uwe Broulik 2012-10-01 12:24:05 UTC
Found the cause, fixing right now :)
Comment 6 Kai Uwe Broulik 2012-10-01 17:47:52 UTC
Kai Uwe Broulik commited changes into master:
Mon, 01 Oct 2012 17:27:42
Overhaul PowerDevil's notifications 

- Removed "The screen is being locked" notification 
- Cleaned up the notifyrc (half of the notifications was no longer used) 
- Fixed notification icons' size being hardcoded to 20x20px 
- Now using more specific icons for notifications rather than generic dialog-warning 
- Added notification titles rather than generic "KDE PM" title string 
- Added notification for "battery charge complete" 

REVIEW: 106670 
BUG: 261336 
BUG: 261890 
BUG: 306781 
FIXED-IN: 4.10 
http://quickgit.kde.org/index.php?p=kde-workspace.git&a=commit&h=24249065e4f3b021a258967f859600e0e5f398e0
Comment 7 Kai Uwe Broulik 2012-10-15 03:16:57 UTC
Closing.