Overhaul PowerDevil's notifications

- Removed "The screen is being locked" notification
- Cleaned up the notifyrc (half of the notifications was no longer used)
- Fixed notification icons' size being hardcoded to 20x20px
- Now using more specific icons for notifications rather than generic dialog-warning
- Added notification titles rather than generic "KDE PM" title string
- Added notification for "battery charge complete"

REVIEW: 106670
BUG: 261336
BUG: 261890
BUG: 306781
FIXED-IN: 4.10